--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
             body{
                 background-size: cover;
             }
-        </style>
+    </style>
     
   </head>
   <body style="background-image: url('background.png')">
     <div class="container-fluid bg-primary ">
             <div class="row shadow p-3 mb-5 bg-white rounded">
                 <div class="col-md-6 ">
-                <h1>Drip_<span>Drop</span></h1>
+                    <h1>Drip_<span class="text-primary font-weight-bolder">Drop</span></h1>
                 </div>
                 <div class="col-md-6 ">
                     <nav class="nav nav-pills flex-column flex-sm-row">
@@ -28,6 +28,7 @@
                         <a class="flex-sm-fill text-sm-center nav-link text-dark" href="about.html">About</a>
                         <a class="flex-sm-fill text-sm-center nav-link text-dark" href="services.html">Services</a>
                         <a class="flex-sm-fill text-sm-center nav-link text-dark" href="contact.html">contact</a>
+                        <button type="button" class="btn btn-primary">Sign Up</button>
                     </nav>
                 </div>
             </div>
@@ -35,7 +36,7 @@
 
     <div class="container">
         <div class="row">
-                <div class="col-md-6 mt-md-5">
+                <div class="col-md-6 mt-md-5 ">
                     <h1>About</h1>
                     <p>Drip_Drop has built up a level of expertise to deliver the services and result for all your cleaning requirements.
 
