--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="container-fluid bg-primary ">
             <div class="row shadow p-3 mb-5 bg-white rounded">
                 <div class="col-md-6 ">
-                <h1>Drip_<span>Drop</span></h1>
+                    <h1>Drip_<span class="text-primary font-weight-bolder">Drop</span></h1>
                 </div>
                 <div class="col-md-6 ">
                     <nav class="nav nav-pills flex-column flex-sm-row">
@@ -28,6 +28,7 @@
                         <a class="flex-sm-fill text-sm-center nav-link text-dark" href="about.html">About</a>
                         <a class="flex-sm-fill text-sm-center nav-link text-dark" href="services.html">Services</a>
                         <a class="flex-sm-fill text-sm-center nav-link text-dark" href="contact.html">contact</a>
+                        <button type="button" class="btn btn-primary">Sign Up</button>
                     </nav>
                 </div>
             </div>
