--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
     </style>
     
   </head>
-  <body style="background-image: url('background.png')">
+  <body style="background-image: url('servicebackground.png')">
     <div class="container-fluid bg-primary ">
             <div class="row shadow p-3 mb-5 bg-white rounded">
                 <div class="col-md-6 ">
@@ -35,7 +35,7 @@
     </div>
 
     <div class="card-footer text-md-center">
-        <p>allrights reserved to Tinny @2019</p>
+        <p>all rights reserved to Tinny @2019</p>
     </div>
 
     <!-- Optional JavaScript -->
